--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -14,9 +14,11 @@ include_directories(
     ${ARDUINO_MOCK_LIBS_DIR}/lib/gtest/gtest/src/gtest/googlemock/include
 )
 
-file(GLOB LIB_SRCS "lib/*.cpp")
-file(GLOB TEST_SRCS "*.cpp")
-file(GLOB PROGRAM_SRCS "../src/bttrx_fsm.cpp" "../src/splitstring.cpp" "../src/wt32i.cpp" "../src/serialwrapper.cpp" "../src/led.cpp" "../src/button.cpp")
+file(GLOB LIB_SRCS ${PROJECT_SOURCE_DIR}/lib/*.cpp)
+file(GLOB TEST_SRCS ${PROJECT_SOURCE_DIR}/*.cpp)
+file(GLOB PROGRAM_SRCS ${PROJECT_SOURCE_DIR}/../src/*.cpp)
+list(REMOVE_ITEM PROGRAM_SRCS ${PROJECT_SOURCE_DIR}/../src/main.cpp)
+
 add_executable(test-all ${TEST_SRCS} ${PROGRAM_SRCS} ${LIB_SRCS})
 
 target_link_libraries(test-all
