--- a/.travis.yml
+++ b/.travis.yml
@@ -1,20 +1,14 @@
-language: cpp
-
-cache:
-  directories:
-    - "~/.platformio"
-
-install:
-  - pip install -U platformio
-  - platformio update
-
-jobs:
+matrix:
   include:
-    - stage: test
-      name: "Unit Tests"
+    - language: cpp
       script:
         - ./test/build.sh
-    - stage: build
-      name: "Build Binary"
+    - language: python
+      python: 2.7
+      cache:
+        directories:
+          - "~/.platformio"
+      install:
+        - pip install -U platformio
       script:
         - platformio run -v
