--- a/appveyor.yml
+++ b/appveyor.yml
@@ -7,7 +7,7 @@ environment:
 
 install:
     - git submodule update --init --recursive
-    - pip install -U platformio
+    - sudo pip install -U platformio
 
 test_script:
     - platformio run -v
