--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,17 @@
 matrix:
   include:
     - language: cpp
-      dist: xenial
+      dist: trusty
+      addons:
+        apt:
+          sources:
+            - ubuntu-toolchain-r-test
+          packages:
+            - g++-7
+      env:
+        - MATRIX_EVAL="CC=gcc-7 && CXX=g++-7"
+      before_install:
+        - eval "${MATRIX_EVAL}"
       script:
         - ./test/build.sh
     - language: python
