Setup platformio.ini for ESP32

--- a/platformio.ini
+++ b/platformio.ini
@@ -8,12 +8,21 @@
 ; Please visit documentation for the other options and examples
 ; https://docs.platformio.org/page/projectconf.html
 
+[env]
+extra_scripts = pre:scripts/preBuild.py
+monitor_speed = 115200
+
 [env:teensy32]
 platform = teensy
 board = teensy31
 framework = arduino
 build_flags = -Wall -D USB_SERIAL -D_GLIBCXX_USE_C99
-monitor_speed = 115200
 monitor_port = /dev/ttyACM3
 upload_protocol = teensy-gui
-extra_scripts = pre:scripts/preBuild.py
+
+
+[env:esp32]
+platform = espressif32
+board = nodemcu-32s
+framework = arduino
+build_flags = -Wall -D_GLIBCXX_USE_C99
