Insert pin bindings for ESP32

--- a/platformio.ini
+++ b/platformio.ini
@@ -12,17 +12,26 @@
 extra_scripts = pre:scripts/preBuild.py
 monitor_speed = 115200
 
-[env:teensy32]
-platform = teensy
-board = teensy31
-framework = arduino
-build_flags = -Wall -D USB_SERIAL -D_GLIBCXX_USE_C99
-monitor_port = /dev/ttyACM3
-upload_protocol = teensy-gui
-
+; You MUST inject these options into [env:] section
+; using ${common_env_data.***} (see below)
+[common_env_data]
+build_flags = -Wall -D_GLIBCXX_USE_C99
 
 [env:esp32]
 platform = espressif32
 board = nodemcu-32s
 framework = arduino
-build_flags = -Wall -D_GLIBCXX_USE_C99
+build_flags = 
+    ${common_env_data.build_flags}
+    -DESP32
+
+[env:teensy32]
+platform = teensy
+board = teensy31
+framework = arduino
+build_flags =
+    ${common_env_data.build_flags}
+    -DTEENSY32
+    -D USB_SERIAL
+monitor_port = /dev/ttyACM3
+upload_protocol = teensy-gui
