--- a/platformio.ini
+++ b/platformio.ini
@@ -25,13 +25,13 @@ build_flags =
     ${common_env_data.build_flags}
     -DESP32
 
-[env:teensy32]
-platform = teensy
-board = teensy31
-framework = arduino
-build_flags =
-    ${common_env_data.build_flags}
-    -DTEENSY32
-    -D USB_SERIAL
-monitor_port = /dev/ttyACM3
-upload_protocol = teensy-gui
+;[env:teensy32]
+;platform = teensy
+;board = teensy31
+;framework = arduino
+;build_flags =
+;    ${common_env_data.build_flags}
+;    -DTEENSY32
+;    -D USB_SERIAL
+;monitor_port = /dev/ttyACM3
+;upload_protocol = teensy-gui
