--- a/.travis.yml
+++ b/.travis.yml
@@ -1,21 +1,21 @@
 matrix:
   include:
     - language: cpp
-      dist: trusty
+      dist: bionic
       addons:
         apt:
           sources:
             - ubuntu-toolchain-r-test
           packages:
-            - g++-7
+            - g++-9
       env:
-        - MATRIX_EVAL="CC=gcc-7 && CXX=g++-7"
+        - MATRIX_EVAL="CC=gcc-9 && CXX=g++-9"
       before_install:
         - eval "${MATRIX_EVAL}"
       script:
         - ./test/build.sh
     - language: python
-      python: 2.7
+      python: 3.8
       cache:
         directories:
           - "~/.platformio"
