--- a/platformio.ini
+++ b/platformio.ini
@@ -24,6 +24,8 @@ framework = arduino
 build_flags = 
     ${common_env_data.build_flags}
     -DESP32
+upload_port = /dev/ttyUSB0
+monitor_port = /dev/ttyUSB0
 
 ;[env:teensy32]
 ;platform = teensy
