--- a/platformio.ini
+++ b/platformio.ini
@@ -9,6 +9,7 @@
 ; https://docs.platformio.org/page/projectconf.html
 
 [env]
+lib_deps = ESP Async WebServer
 extra_scripts = pre:scripts/preBuild.py
 monitor_speed = 115200
 
