Changing partition layout

--- a/platformio.ini
+++ b/platformio.ini
@@ -20,6 +20,7 @@ build_flags = -Wall -D_GLIBCXX_USE_C99
 [env:esp32]
 platform = espressif32
 board = nodemcu-32s
+board_build.partitions = partition_layout.csv
 framework = arduino
 build_flags = 
     ${common_env_data.build_flags}
