Further work on the website (automatic include generation, showing toast on success)

--- a/platformio.ini
+++ b/platformio.ini
@@ -10,7 +10,9 @@
 
 [env]
 lib_deps = ESP Async WebServer
-extra_scripts = pre:scripts/preBuild.py
+extra_scripts = 
+    pre:scripts/generateWebsite.py
+    pre:scripts/preBuild.py   
 monitor_speed = 115200
 
 ; You MUST inject these options into [env:] section
