--- a/platformio.ini
+++ b/platformio.ini
@@ -21,7 +21,7 @@ monitor_speed = 115200
 build_flags = -Wall -D_GLIBCXX_USE_C99
 
 [env:esp32]
-platform = espressif32
+platform = espressif32@>=1.11.0
 board = nodemcu-32s
 board_build.partitions = partition_layout.csv
 framework = arduino
