--- a/platformio.ini
+++ b/platformio.ini
@@ -10,6 +10,7 @@
 
 [env]
 lib_deps = ESP Async WebServer
+           ESP8266_SSD1306
 extra_scripts = 
     pre:scripts/generateWebsite.py
     pre:scripts/preBuild.py   
