--- a/platformio.ini
+++ b/platformio.ini
@@ -10,7 +10,7 @@
 
 [env]
 lib_deps = ESP Async WebServer
-           ESP8266_SSD1306
+           thingpulse/ESP8266 and ESP32 OLED driver for SSD1306 displays@^4.2.0
 extra_scripts = 
     pre:scripts/generateWebsite.py
     pre:scripts/preBuild.py   
