[#64] Try to fix renaming with tags

--- a/.github/workflows/build_firmware.yml
+++ b/.github/workflows/build_firmware.yml
@@ -10,7 +10,12 @@ jobs:
     - name: Checkout repo and submodules
       uses: actions/checkout@v2
       with:
+        fetch-depth: 0
         submodules: recursive
+    - name: Set variables
+      id: vars
+      run: |
+        echo "::set-output name=tag::$(git describe --tags)"
     - name: Install dependencies
       run: |
         pip install -U platformio
@@ -19,11 +24,10 @@ jobs:
         platformio run -v
     - name: Prepare Artifacts
       run: |
-        export GIT_TAG=$(git describe)
-        mv .pio/build/esp32/firmware.bin ./bt-trx_esp32_firmware_${GIT_TAG}.bin
-        mv .pio/build/esp32/partitions.bin ./bt-trx_esp32_partitions_${TRGIT_TAGAVIS_TAG}.bin
+        mv .pio/build/esp32/firmware.bin ./bt-trx_esp32_firmware_${{ steps.vars.outputs.tag }}.bin
+        mv .pio/build/esp32/partitions.bin ./bt-trx_esp32_partitions_${{ steps.vars.outputs.tag }}.bin
     - name: Upload artifacts
       uses: actions/upload-artifact@v2
       with:
-        name: bt-trx_esp32_firmware_${GIT_TAG}
+        name: bt-trx_esp32_firmware_${{ steps.vars.outputs.tag }}
         path: .pio/build/esp32/*.bin
