--- a/.github/workflows/build_firmware.yml
+++ b/.github/workflows/build_firmware.yml
@@ -30,4 +30,4 @@ jobs:
       uses: actions/upload-artifact@v2
       with:
         name: bt-trx_esp32_firmware_${{ steps.vars.outputs.tag }}
-        path: .pio/build/esp32/*.bin
+        path: ./*.bin
