--- a/platformio.ini
+++ b/platformio.ini
@@ -9,7 +9,7 @@
 ; https://docs.platformio.org/page/projectconf.html
 
 [env]
-lib_deps = ESP Async WebServer
+lib_deps = ESP Async WebServer@1.2.3
            thingpulse/ESP8266 and ESP32 OLED driver for SSD1306 displays@^4.2.0
 extra_scripts = 
     pre:scripts/generateWebsite.py
